# AI-Virtual-Reality

./: README.md  config.json  requirements.txt  run.py
docs/: headset-free-steamvr.md  vmt-bridge.md  vr-bridge-protocol.md
src/ai_vr_tracking/: app.py  config.py  constants.py  gui.py  models.py  output.py  steamvr_setup.py  tracking.py  vmt_bridge.py
steamvr/ai_headless_hmd_driver/: CMakeLists.txt  install_driver.ps1
steamvr/ai_headless_hmd_driver/aitrackinghmd/: driver.vrdrivermanifest
steamvr/ai_headless_hmd_driver/aitrackinghmd/resources/input/: aitrackinghmd_profile.json
steamvr/ai_headless_hmd_driver/aitrackinghmd/resources/localization/: localization.json
steamvr/ai_headless_hmd_driver/aitrackinghmd/resources/settings/: default.vrsettings
steamvr/ai_headless_hmd_driver/src/: device_provider.cpp  device_provider.h  hmd_device_driver.cpp  hmd_device_driver.h  hmd_driver_factory.cpp
tools/: mock_vr_runtime.py  vmt_bridge.py
